# vacation-rentals-agent

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
shared_utils/: __init__.py  card_url_utils.py  middleware.py  server_utils.py
vacation_rentals_agent/: __init__.py  agent.json  agent.py  logging_config.py  middleware.py  server.py
vacation_rentals_agent/docker_setup/: Dockerfile  docker-compose.yml
